# refresher

./: .pre-commit-config.yaml  Jupyter.ipynb  Matplotlib.ipynb  Pandas.ipynb  README.md  Seaborn.ipynb  TODO.txt  blogs.txt  models.tex  pyproject.toml
guides/: Bash  Matplotlib.ipynb  Pandas.ipynb  Seaborn.ipynb  eda.txt
resources/: annotated_code.txt  blogs.txt  textbooks.txt
