[tool.poetry]
name = "refresher"
version = "0.1.0"
description = "One stop shop for the information needed to get up to speed on a variety of tools"
authors = ["cjuracek <therealjuracek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
